--- a/games/index.html
+++ b/games/index.html
@@ -122,16 +122,16 @@
         <div class="mdl-layout__drawer">
             <span class="mdl-layout-title">Menu</span>
             <nav class="mdl-navigation" id="main-navigation">
-                <a class="mdl-navigation__link" href="./recepcao.html">Página Inicial</a>
-                <a class="mdl-navigation__link" href="./admintools/editordeartigos.html">Adicionar Artigo</a>
-                <a class="mdl-navigation__link" href="./register-material.html">Registrar Matéria</a>
-                <a class="mdl-navigation__link" href="conhecawazzimagiygg.html">Conheça WazzimaGiygg</a>
-                <a class="mdl-navigation__link" href="./admintools/cadastrarprofessor.html">Cadastrar Professor</a>
-                <a class="mdl-navigation__link" href="./detalhes_cliente/">Procurar informações sobre Cliente</a>
-                <a class="mdl-navigation__link" href="./admintools/editordenoticias.html">Adicionar Noticia</a>
-                <a class="mdl-navigation__link" href="./administrarcustos/">Administrar Custos</a>
-                <a class="mdl-navigation__link" href="./admintools/configuracoes.html" data-requires-auth="true">Configurações</a> <a class="mdl-navigation__link" href="./admintools/estatisticas.html">Estatísticas</a>
-                <a class="mdl-navigation__link" href="./admintools/pageadmin.html">Página Administradora</a>
+                <a class="mdl-navigation__link" href="../recepcao.html">Página Inicial</a>
+                <a class="mdl-navigation__link" href="../admintools/editordeartigos.html">Adicionar Artigo</a>
+                <a class="mdl-navigation__link" href="../register-material.html">Registrar Matéria</a>
+                <a class="mdl-navigation__link" href="../conhecawazzimagiygg.html">Conheça WazzimaGiygg</a>
+                <a class="mdl-navigation__link" href="../admintools/cadastrarprofessor.html">Cadastrar Professor</a>
+                <a class="mdl-navigation__link" href="../detalhes_cliente/">Procurar informações sobre Cliente</a>
+                <a class="mdl-navigation__link" href="../admintools/editordenoticias.html">Adicionar Noticia</a>
+                <a class="mdl-navigation__link" href="../administrarcustos/">Administrar Custos</a>
+                <a class="mdl-navigation__link" href="../admintools/configuracoes.html" data-requires-auth="true">Configurações</a> <a class="mdl-navigation__link" href="./admintools/estatisticas.html">Estatísticas</a>
+                <a class="mdl-navigation__link" href="../admintools/pageadmin.html">Página Administradora</a>
 
                 <a class="mdl-navigation__link" href="http://www.wzzm.org/POL%C3%8DTICAS%20GERAIS%20DO%20WIKI%20ZONE%20ZERO%20MOD.pdf">Políticas da WZZM</a>
                 <a class="mdl-navigation__link" href="#" data-page-src="cadastro-aplicativo.html" data-requires-auth="true">
