--- a/menu.html
+++ b/menu.html
@@ -48,6 +48,7 @@
 <body>
     <nav>
         <a href="index.html" target="_top">Página Principal</a>
+        <a href="./games/" target="_top">Jogos Gratuitos de Desenvolvimento</a>
         <a href="recent_changes.html" target="_top">Mudanças Recentes</a>
         <a href="random_page.html" target="_top">Página Aleatória</a>
         <div class="user-info">
