--- a/games/index.html
+++ b/games/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -156,11 +155,13 @@
 
             // Adiciona listeners aos botões
             gameCard.querySelector('.play-button').addEventListener('click', () => {
-                window.open(`../${game.path}/index.html`, '_blank');
+                // Abre na mesma aba: remova o '_blank'
+                window.location.href = `../${game.path}/index.html`; 
             });
 
             gameCard.querySelector('.config-button').addEventListener('click', () => {
-                window.open(`../${game.path}/configuracoes.html`, '_blank');
+                // Abre na mesma aba: remova o '_blank'
+                window.location.href = `../${game.path}/configuracoes.html`;
             });
 
             return gameCard;
