--- a/games/index.html
+++ b/games/index.html
@@ -98,7 +98,7 @@
             {
                 nome: "Nuke Analy",
                 descricao: "Um jogo de estratégia nuclear onde cada decisão conta. Gerencie recursos, pesquise tecnologias e domine o campo de batalha nuclear!",
-                path: "nukeanaly", // Este é o link interno para a pasta do jogo
+                path: "./nukeanaly/", // Este é o link interno para a pasta do jogo
                 imageUrl: "https://i.imgur.com/your-nukeanaly-cover.png", // Substitua pela URL real da imagem
                 status: "Ativo",
                 versao: "1.0.0"
@@ -106,7 +106,7 @@
             {
                 nome: "Cyber Blade",
                 descricao: "Embarque em uma aventura futurista com combates de alta velocidade e uma história envolvente. Personalize seu blade e lute pela liberdade!",
-                path: "cyberblade",
+                path: "./cyberblade/",
                 imageUrl: "https://i.imgur.com/your-cyberblade-cover.png", // Substitua
                 status: "Beta",
                 versao: "0.8.5"
@@ -114,7 +114,7 @@
             {
                 nome: "Fantasy Realm",
                 descricao: "Explore um mundo de fantasia épico, repleto de magia, criaturas míticas e segredos antigos. Crie seu herói e forje sua lenda.",
-                path: "fantasyrealm",
+                path: "./fantasyrealm/",
                 imageUrl: "https://i.imgur.com/your-fantasyrealm-cover.png", // Substitua
                 status: "Em Desenvolvimento",
                 versao: "0.1.2"
