--- a/games/index.html
+++ b/games/index.html
@@ -104,9 +104,9 @@
                 versao: "1.0.0"
             },
             {
-                nome: "Cyber Blade",
-                descricao: "Embarque em uma aventura futurista com combates de alta velocidade e uma história envolvente. Personalize seu blade e lute pela liberdade!",
-                path: "./cyberblade/",
+                nome: "Pac Pédia",
+                descricao: "Fuja dos fantasminhas dos moderadores da Wiki.",
+                path: "./pacpedia/",
                 imageUrl: "https://i.imgur.com/your-cyberblade-cover.png", // Substitua
                 status: "Beta",
                 versao: "0.8.5"
