--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
             <nav class="mdl-navigation" id="main-navigation">
                 <a class="mdl-navigation__link" href="#" data-page-src="recepcao.html" data-requires-auth="false">Página Inicio</a>
                 <a class="mdl-navigation__link" href="#" data-page-src="./games/" data-requires-auth="false">Jogos Gratuitos</a>
-
+                <a class="mdl-navigation__link" href="#" data-page-src="./chat/" data-requires-auth="false">CHAT ONLINE</a>
+                
                 <a class="mdl-navigation__link" href="http://www.wzzm.org/POL%C3%8DTICAS%20GERAIS%20DO%20WIKI%20ZONE%20ZERO%20MOD.pdf" target="_blank">Políticas da WZZM</a>
                 <a class="mdl-navigation__link" href="#" data-page-src="cadastro-aplicativo.html" data-requires-auth="true">
                     <i class="material-icons">developer_mode</i> Cadastrar Aplicativo
