--- a/games/pacpedia/index.html
+++ b/games/pacpedia/index.html
@@ -235,6 +235,7 @@
     <div id="message-display">Use as setas do teclado para mover. Clique em "Iniciar Jogo" para começar!</div>
     <button id="start-button">Iniciar Jogo</button>
     <button id="resume-button" style="display: none;">Voltar a Jogar</button>
+    <button id="developer-button">Desenvolvedor: Invencível</button> <div id="name-input-container">
 
     <div id="name-input-container">
         <p>Parabéns! Você fez um novo recorde!</p>
